--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
   <!-- xlsx-populate for generating Excel with embedded images 
        IMPORTANT: Must be a version that supports "sheet.addImage(...)"
   -->
-  <script src="https://cdn.jsdelivr.net/npm/xlsx-populate/browser/xlsx-populate.min.js"></script>
+  <script src="C:\Users\mki97\OneDrive\Desktop\DeviationTool\DeviationTool.github.io\xlsx-populate.min.js"></script>
   
-  <style>
+  <style
     /* Global "app" styling */
     body {
       font-family: Arial, sans-serif;
